[package]
name = "shell-color"
description = "`shell-color` provides a portable, reliable way of determining color support for applications spawned by the shell."
authors = ["Chay Nabors (chaynabors@gmail.com)"]
edition = "2021"
publish = true
version = "1.10.0"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.9.0"
nu-ansi-term = "0.50.1"
nu-color-config = "0.104.0"
